# aura

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  package.json  release-plz.toml  skills-lock.json
.claude-flow/: daemon-state.json
.github/workflows/: release-plz.yml  release.yml  test.yml
crates/cli/: Cargo.toml
crates/cli/src/: board.rs  lib.rs  local_exec.rs  main.rs  runtime.rs  session_store.rs
crates/cli/tests/: run_cli.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/engine/src/coordinator/: mod.rs
crates/engine/src/orchestrator/: mod.rs
crates/engine/src/prompt/: mod.rs
crates/engine/src/state_machine/: mod.rs
crates/engine/tests/: integration_flow.rs
crates/executors/: Cargo.toml
crates/executors/src/: lib.rs
crates/executors/src/adapters/: amp.rs  claude.rs  codex.rs  copilot.rs  cursor_agent.rs  custom.rs  droid.rs  gemini.rs  local.rs  mod.rs  ollama.rs  opencode.rs  qwen_code.rs
crates/git/: Cargo.toml
crates/git/src/: lib.rs
crates/notify-contracts/: Cargo.toml  README.md
crates/notify-contracts/src/: lib.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: config.rs  lib.rs  planner.rs  providers.rs  retry.rs  scheduler.rs  supervisor.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/store/src/memory/: mod.rs
crates/store/src/sqlite/: mod.rs
crates/usage/: Cargo.toml
crates/usage/src/: lib.rs
crates/worker-protocol/: Cargo.toml
crates/worker-protocol/src/: lib.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: lib.rs
scripts/: changelog.mjs
