[workspace]
resolver = "2"
members = [
  "crates/contracts",
  "crates/store",
  "crates/git",
  "crates/workspace",
  "crates/executors",
  "crates/worker-protocol",
  "crates/engine",
  "crates/cli",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
git2 = { version = "0.20", default-features = false }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "process", "sync", "time", "fs", "io-util"] }
tracing = "0.1"
uuid = { version = "1.18", features = ["serde", "v4"] }
indexmap = { version = "2.9", features = ["serde"] }

[profile.release]
codegen-units = 1
lto = true
strip = true
