[workspace]
resolver = "2"
members = [
  "crates/usage",
  "crates/contracts",
  "crates/store",
  "crates/git",
  "crates/workspace",
  "crates/executors",
  "crates/worker-protocol",
  "crates/engine",
  "crates/notify-contracts",
  "crates/orchestrator",
  "crates/cli",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["AURA Contributors"]
repository = "https://github.com/chasebuild/aura"
homepage = "https://github.com/chasebuild/aura"
readme = "README.md"
keywords = ["ai", "agent", "orchestration", "cli"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
aura-contracts = { version = "0.2.0", path = "crates/contracts" }
aura-store = { version = "0.2.0", path = "crates/store" }
aura-git = { version = "0.2.0", path = "crates/git" }
aura-workspace = { version = "0.2.0", path = "crates/workspace" }
aura-executors = { version = "0.2.0", path = "crates/executors" }
aura-worker-protocol = { version = "0.2.0", path = "crates/worker-protocol" }
aura-engine = { version = "0.2.0", path = "crates/engine" }
aura-usage = { version = "0.2.0", path = "crates/usage" }
aura-notify-contracts = { version = "0.2.0", path = "crates/notify-contracts" }
aura-orchestrator = { version = "0.2.0", path = "crates/orchestrator" }
aura-cli = { version = "0.2.0", path = "crates/cli" }
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
git2 = { version = "0.20", default-features = false }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "process", "sync", "time", "fs", "io-util", "signal"] }
tracing = "0.1"
uuid = { version = "1.18", features = ["serde", "v4"] }
indexmap = { version = "2.9", features = ["serde"] }

[profile.release]
codegen-units = 1
lto = true
strip = true
