[package]
name = "aura-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "aura"
path = "src/main.rs"

[dependencies]
aura-contracts = { path = "../contracts" }
aura-executors = { path = "../executors" }
aura-usage = { path = "../usage" }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
cliclack = "0.3"
crossterm = "0.28"
duct = "0.13"
ratatui = "0.29"
pulldown-cmark = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
