[package]
name = "aura-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Command-line interface and TUI for running AURA executors."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/aura-cli"
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "aura"
path = "src/main.rs"

[dependencies]
aura-contracts.workspace = true
aura-executors.workspace = true
aura-usage.workspace = true
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
cliclack = "0.3"
crossterm = "0.28"
duct = "0.13"
ratatui = "0.29"
pulldown-cmark = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
