[package]
name = "aura-contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared contracts and domain models for AURA executors and engine."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/aura-contracts"
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
indexmap.workspace = true
