[package]
name = "aura-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Deterministic execution state machine and orchestration primitives for AURA."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/aura-engine"
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
aura-contracts.workspace = true
aura-executors.workspace = true
aura-git.workspace = true
aura-store.workspace = true
aura-worker-protocol.workspace = true
async-trait.workspace = true
chrono.workspace = true
regex.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
