[package]
name = "aura-executors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Coding-agent executor adapters and process orchestration for AURA."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/aura-executors"
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
aura-contracts.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
shlex = "1.3"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process", "io-util"] }
