[package]
name = "aura-git"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Git and worktree safety primitives used by AURA."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/aura-git"
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
git2.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.20"
