[package]
name = "aura-notify-contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Notification event contracts for pluggable AURA notifier integrations."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/aura-notify-contracts"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
