[package]
name = "aura-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Composable multi-agent supervisor runtime for AURA orchestration."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/aura-orchestrator"
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
aura-contracts.workspace = true
aura-engine.workspace = true
aura-store = { workspace = true, features = ["sqlite"] }
aura-notify-contracts.workspace = true
async-trait.workspace = true
chrono.workspace = true
indexmap.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml = "0.8"

[dev-dependencies]
tempfile = "3"
