[package]
name = "aura-store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
sqlite = ["dep:sqlx"]

[dependencies]
aura-contracts = { path = "../contracts" }
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
indexmap.workspace = true
sqlx = { version = "0.8", optional = true, default-features = false, features = ["runtime-tokio", "sqlite"] }
