[package]
name = "aura-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Persistent and in-memory storage backends for AURA orchestration state."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/aura-store"
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
sqlite = ["dep:sqlx"]

[dependencies]
aura-contracts.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
indexmap.workspace = true
sqlx = { version = "0.8", optional = true, default-features = false, features = ["runtime-tokio", "sqlite"] }

[dev-dependencies]
tempfile = "3"
