[package]
name = "aura-worker-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "JSON-RPC protocol and worker lease types for AURA remote execution."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/aura-worker-protocol"
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
aura-contracts.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
