[package]
name = "aura-workspace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Workspace and multi-repo worktree orchestration utilities for AURA."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/aura-workspace"
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
aura-git.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.20"
